# FacialRecognitionAndTriangulation

./: README.md
FaceRecC/: CMakeLists.txt  main.cpp  render_face_lines.h  render_face_points.h
FaceRecC/dlib/image_processing/: render_face_detections.h  render_face_points.h
